update duplicate users error
